<resources>
    <string name="app_name">HealthApp</string>
    <string name="title_information">Information</string>
    <string name="title_forum">Forum</string>
    <string name="title_profile">Profile</string>
    <string name="blogs_text">BLOGS</string>
    <string name="videos_text">VIDEOS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="videos_title">Videos</string>
    <string name="blogs_title">Blogs</string>
    <string name="title_activity_play_video">PlayVideoActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="developer_key">AIzaSyCbRe7orPL83e46DsxrevnMKcYJcUmQoYo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="register">Register</string>
    <string name="hint_password">Password</string>
    <string name="mobile">Mobile Number</string>
    <string name="email">Email</string>
    <string name="lastname">last Name</string>
    <string name="firstname">First Name</string>

    <!--     rules&regulation-->
    <string name="rules_and_regulation">This is a nice community with a relaxed atmosphere, made to solve our doubts and have a healthy discussion around college or the app. Underneath you will find more information about the forum! Feel free to give us a feedback on this or ask questions in the forum itself! </string>
    <string name="rules">Rules: \n\n We have a few simple rules, you should follow in order to keep our community a nice place where people want to come back to. \n\n I. Keep all communication as much English or Hinglish as possible. \n\n II. No hate, toxic behavior, sexism, or racism of any kind. Using any kind of derogatory language may result in ban. \n\n III. Make sure the question you ask hasn\'t already been answered. \n\n IV. Starting or participating in drama of any kind is strictly forbidden. \n\n V. Disrespecting other students is not allowed. \n\n VI. You shouldn\'t spam questions or ask for replies many times. \n\n By accepting these rules, you give us rights to take strict action against your account if you are constantly breaking the rules even after giving warnings.</string>

</resources>